--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: timCF
+title: timCF projects
 ---
 <div>
-	<h1>Hi there, I'm timCF! This is my homepage!</h1>
+	<h1>My projects</h1>
 </div>
