--- a/index.html
+++ b/index.html
@@ -8,15 +8,19 @@ technologies:
   jade: {icon: "/img/jade.png", site: "http://jade-lang.com/", hint: "jade template engine"}
   sass: {icon: "/img/sass.png", site: "http://sass-lang.com/", hint: "sass template engine"}
   brunch: {icon: "/img/brunch.png", site: "http://brunch.io/", hint: "brunch build system"}
-  bash: {icon: "/img/bash.png", site: "https://ru.wikipedia.org/wiki/Bash", hint: "bash shell script"}
+  bash: {icon: "/img/bash.png", site: "https://en.wikipedia.org/wiki/Bash_(Unix_shell)", hint: "bash shell script"}
   ci: {icon: "/img/ci.png", site: "https://travis-ci.org/", hint: "continuous integration"}
+  phantomjs: {icon: "/img/phantomjs.png", site: "http://phantomjs.org/", hint: "phantomjs headless browser engine"}
+  reactjs: {icon: "/img/react.png", site: "https://facebook.github.io/react/", hint: "react js framework"}
 projects:
-  - {name: "Upup!", technologies: ["elixir","coffee","jade","sass","brunch"], description: "server-side application to auto upload and refresh data in vk.com social network", github: "https://github.com/timCF/upup", server: "http://92.222.106.195:8041/", kind: "app"}
+  - {name: "Upup!", technologies: ["elixir","coffee","jade","sass","brunch","reactjs","phantomjs"], description: "server-side application to auto upload and refresh data in vk.com social network", github: "https://github.com/timCF/upup", server: "http://92.222.106.195:8041/", kind: "app"}
   - {name: "Sqlx", technologies: ["elixir"], description: "simple wrapper around emysql", github: "https://github.com/timCF/sqlx", kind: "lib"}
   - {name: "Imuta", technologies: ["coffee"], description: "crazy small js lib to operate data true functional way", github: "https://github.com/timCF/imuta", kind: "lib"}
   - {name: "Act", technologies: ["coffee"], description: "this small lib provides almost pure erlang-style actors in js", github: "https://github.com/timCF/act", kind: "lib"}
   - {name: "Cibash", technologies: ["bash","ci"], description: "some bash scripts for CI build and deploy", github: "https://github.com/timCF/cibash", kind: "lib"}
-  - {name: "Wwwest", technologies: ["elixir"], description: "wrapper around cowboy webserver to simplify building json-based REST API", github: "https://github.com/timCF/wwwest", kind: "lib"}
+  - {name: "Wwwest", technologies: ["elixir"], description: "wrapper around erlang cowboy webserver to simplify building json-based REST API", github: "https://github.com/timCF/wwwest", kind: "lib"}
+  - {name: "WwwestLite", technologies: ["elixir"], description: "simplified version of Wwwest library for building REST API", github: "https://github.com/timCF/wwwest_lite", kind: "lib"}
+  - {name: "Myswt", technologies: ["elixir","coffee","jade","sass","brunch","reactjs","phantomjs"], description: "simple template, based on erlang cowboy (server) and reactjs (client) for fast building web-applications with user web interfaces", github: "https://github.com/timCF/myswt", kind: "lib"}
 ---
 <div class="container-fluid">
 	<div class="row">
