--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ projects:
   - {name: "Cibash", technologies: ["bash","ci"], description: "some bash scripts for CI build and deploy", github: "https://github.com/timCF/cibash", kind: "lib"}
   - {name: "Wwwest", technologies: ["elixir"], description: "wrapper around erlang cowboy webserver to simplify building json-based REST API", github: "https://github.com/timCF/wwwest", kind: "lib"}
   - {name: "WwwestLite", technologies: ["elixir"], description: "simplified version of Wwwest library for building REST API", github: "https://github.com/timCF/wwwest_lite", kind: "lib"}
-  - {name: "Myswt", technologies: ["elixir","coffee","jade","sass","brunch","reactjs"], description: "simple template, based on erlang cowboy (server) and reactjs (client) for fast building web-applications with user web interfaces", github: "https://github.com/timCF/myswt", kind: "lib"}
+  - {name: "Myswt", technologies: ["elixir","coffee","jade","sass","brunch","reactjs"], description: "based on erlang cowboy (server) and reactjs (client) simple template for fast building web-applications with user web interfaces", github: "https://github.com/timCF/myswt", kind: "lib"}
 ---
 <div class="container-fluid">
 	<div class="row">
