--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: projects
-colors: ["c_blue","c_dirty","c_yellow","c_red","c_brown","c_purple"]
+colors: ["c_blue","c_purple","c_dirty","c_yellow","c_red","c_brown"]
 technologies:
   elixir: {icon: "/img/elixir.png", site: "http://elixir-lang.org/", hint: "elixir / erlang / OTP platform"}
   coffee: {icon: "/img/coffee.png", site: "http://coffeescript.org/", hint: "coffeescript language"}
@@ -12,37 +12,51 @@ technologies:
   ci: {icon: "/img/ci.png", site: "https://travis-ci.org/", hint: "continuous integration"}
   phantomjs: {icon: "/img/phantomjs.png", site: "http://phantomjs.org/", hint: "phantomjs headless browser engine"}
   reactjs: {icon: "/img/react.png", site: "https://facebook.github.io/react/", hint: "react js framework"}
+  mysql: {icon: "/img/mysql.png", site: "https://www.mysql.com/", hint: "mysql storage"}
+  cassandra: {icon: "/img/cassandra.png", site: "http://cassandra.apache.org/", hint: "nosql cassandra storage"}
 projects:
-  - {name: "Upup!", technologies: ["elixir","coffee","jade","sass","brunch","reactjs","phantomjs"], description: "server-side application to auto upload and refresh data in vk.com social network", github: "https://github.com/timCF/upup", server: "http://92.222.106.195:8041/", kind: "app"}
-  - {name: "Sqlx", technologies: ["elixir"], description: "simple wrapper around emysql", github: "https://github.com/timCF/sqlx", kind: "lib"}
+  - {name: "Sqlx", technologies: ["elixir","mysql"], description: "simple wrapper around emysql", github: "https://github.com/timCF/sqlx", kind: "lib"}
+  - {name: "Upup!", technologies: ["elixir","mysql","coffee","jade","sass","brunch","reactjs","phantomjs"], description: "server-side application to auto upload and refresh data in vk.com social network", github: "https://github.com/timCF/upup", server: "http://92.222.106.195:8041/", kind: "app"}
   - {name: "Imuta", technologies: ["coffee"], description: "crazy small js lib to operate data true functional way", github: "https://github.com/timCF/imuta", kind: "lib"}
   - {name: "Act", technologies: ["coffee"], description: "this small lib provides almost pure erlang-style actors in js", github: "https://github.com/timCF/act", kind: "lib"}
   - {name: "Cibash", technologies: ["bash","ci"], description: "some bash scripts for CI build and deploy", github: "https://github.com/timCF/cibash", kind: "lib"}
   - {name: "Wwwest", technologies: ["elixir"], description: "wrapper around erlang cowboy webserver to simplify building json-based REST API", github: "https://github.com/timCF/wwwest", kind: "lib"}
   - {name: "WwwestLite", technologies: ["elixir"], description: "simplified version of Wwwest library for building REST API", github: "https://github.com/timCF/wwwest_lite", kind: "lib"}
   - {name: "Myswt", technologies: ["elixir","coffee","jade","sass","brunch","reactjs"], description: "based on erlang cowboy (server) and reactjs (client) simple template for fast building web-applications with user web interfaces", github: "https://github.com/timCF/myswt", kind: "lib"}
+  - {name: "Socex", technologies: ["elixir"], description: "console vk.com chat, multi-acc supported", github: "https://github.com/timCF/socex", kind: "app"}
+  - {name: "Cqlx", technologies: ["elixir","cassandra"], description: "simple wrapper around cqerl", github: "https://github.com/timCF/cqlx", kind: "lib"}
 ---
 <div class="container-fluid">
-	<div class="row">
 		{% for project in page.projects %}
-			{% assign index = forloop.index | modulo:6 %}
-			<div class="col-md-6 btn-default {{ page.colors[index] }}" onclick="window.open('{{ project.github }}')">
-				<h3>
-					{% for tech in project.technologies %}
-						<img class="imgicon" src="{{ page.technologies[tech].icon }}" data-toggle="tooltip" data-placement="top" title="{{ page.technologies[tech].hint }}" onclick="window.open('{{ page.technologies[tech].site }}')"/>
+			{% assign color = forloop.index %}
+			{% assign is_even = forloop.index | modulo:2 %}
+			{% if is_even == 1 %}
+				<div class="row row-eq-height">
+					{% assign prev_index = forloop.index | minus: 1 %}
+					{% assign projects = "" | split:"|" | push: page.projects[forloop.index] | push: page.projects[prev_index] %}
+					{% for project in projects %}
+						{% if project %}
+							{% assign color = forloop.index | minus: 1 | plus: color | modulo:6 %}
+							<div class="col-md-6 btn-default {{ page.colors[color] }}" onclick="window.open('{{ project.github }}')">
+								<h3>
+									{% for tech in project.technologies %}
+										<img class="imgicon" src="{{ page.technologies[tech].icon }}" data-toggle="tooltip" data-placement="top" title="{{ page.technologies[tech].hint }}" onclick="window.open('{{ page.technologies[tech].site }}')"/>
+									{% endfor %}
+									{% if project.kind == "app" %}
+										<img class="imgicon" src="/img/app.png" data-toggle="tooltip" data-placement="top" title="this is application"/>
+									{% else %}
+										<img class="imgicon" src="/img/lib.png" data-toggle="tooltip" data-placement="top" title="this is library"/>
+									{% endif %}
+									{% if project.server %}
+										<img class="imgicon" src="/img/server.png" data-toggle="tooltip" data-placement="top" title="demo" onclick="window.open('{{ project.server }}')"/>
+									{% endif %}
+								</h3>
+								<h3>{{project.name}}</h3>
+								<p>{{project.description}}</p>
+							</div>
+						{% endif %}
 					{% endfor %}
-					{% if project.kind == "app" %}
-						<img class="imgicon" src="/img/app.png" data-toggle="tooltip" data-placement="top" title="this is application"/>
-					{% else %}
-						<img class="imgicon" src="/img/lib.png" data-toggle="tooltip" data-placement="top" title="this is library"/>
-					{% endif %}
-					{% if project.server %}
-						<img class="imgicon" src="/img/server.png" data-toggle="tooltip" data-placement="top" title="demo" onclick="window.open('{{ project.server }}')"/>
-					{% endif %}
-				</h3>
-				<h3>{{project.name}}</h3>
-				<p>{{project.description}}</p>
-			</div>
+				</div>
+			{% endif %}
 		{% endfor %}
-	</div>
 </div>
