add some personal content

--- a/person.html
+++ b/person.html
@@ -1,7 +1,18 @@
 ---
 layout: default
-title: timCF person
+title: person
 ---
 <div>
-	<h1>Hi there, I'm timCF! This is my homepage!</h1>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-md-12">
+				<h4 class="text-justify">
+					Tkachuk Ilya, male, was born in 1990, single, no children, no pets. Education : Lomonosov Moscow State University, specialist in chemistry. Languages: Erlang, Elixir, Clojure (Lisp), CoffeeScript.
+				</h4>
+				<h4 class="text-justify">
+					Professional skills : Functional backend programming. Web programming. Building rest api. Can integrate anything with anything in the web. Have rich experience in development for BEAM/Erlang VM using OTP. I prefer Elixir language, but can write in pure Erlang if needed. Have experience in web development (prefer to use Erlang Cowboy webserver with Bullet websockets), for writing client side prefer CoffeeScript, use mainstream frameworks like Twitter Bootstrap. Used AngularJS, but now prefer to use ReactJS. For building client-side projects, I'm using brunch + jade + coffee + sass + jreact. My coffescript code is functional and declarative as much as possible. Have experience in development for UNIX-like OS. Have experience in MySQL, NoSQL. Use git in development process. Have experience in RabbitMQ.
+				</h4>
+			</div>
+		</div>
+	</div>
 </div>
