--- a/person.html
+++ b/person.html
@@ -5,7 +5,7 @@ title: person
 <div>
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-md-12">
+			<div class="col-xs-12">
 				<h4 class="text-justify">
 					Tkachuk Ilya, male, was born in 1990, single, no children, no pets. Education : Lomonosov Moscow State University, specialist in chemistry. Languages: Erlang, Elixir, Clojure (Lisp), CoffeeScript.
 				</h4>
