--- a/index.html
+++ b/index.html
@@ -1,56 +1,22 @@
 ---
 layout: default
 title: projects
-colors: ["c_blue","c_purple","c_dirty","c_yellow","c_red","c_brown"]
-technologies:
-  elixir: {icon: "/img/elixir.png", site: "http://elixir-lang.org/", hint: "elixir / erlang / OTP platform"}
-  coffee: {icon: "/img/coffee.png", site: "http://coffeescript.org/", hint: "coffeescript language"}
-  jade: {icon: "/img/jade.png", site: "http://jade-lang.com/", hint: "jade template engine"}
-  sass: {icon: "/img/sass.png", site: "http://sass-lang.com/", hint: "sass template engine"}
-  brunch: {icon: "/img/brunch.png", site: "http://brunch.io/", hint: "brunch build system"}
-  bash: {icon: "/img/bash.png", site: "https://en.wikipedia.org/wiki/Bash_(Unix_shell)", hint: "bash shell script"}
-  ci: {icon: "/img/ci.png", site: "https://travis-ci.org/", hint: "continuous integration"}
-  phantomjs: {icon: "/img/phantomjs.png", site: "http://phantomjs.org/", hint: "phantomjs headless browser engine"}
-  reactjs: {icon: "/img/react.png", site: "https://facebook.github.io/react/", hint: "react js framework"}
-  mysql: {icon: "/img/mysql.png", site: "https://www.mysql.com/", hint: "mysql storage"}
-  cassandra: {icon: "/img/cassandra.png", site: "http://cassandra.apache.org/", hint: "nosql cassandra storage"}
-  clojure: {icon: "/img/clojure.png", site: "https://clojure.org/", hint: "clojure language"}
-  scala: {icon: "/img/scala.png", site: "http://www.scala-lang.org/", hint: "scala language"}
-projects:
-  - {name: "Sqlx", technologies: ["elixir","mysql"], description: "simple wrapper around emysql", github: "https://github.com/timCF/sqlx", kind: "lib"}
-  - {name: "Upup!", technologies: ["elixir","mysql","coffee","jade","sass","brunch","reactjs","phantomjs"], description: "server-side application to auto upload and refresh data in vk.com social network", github: "https://github.com/timCF/upup", server: "http://92.222.106.195:8041/", kind: "app"}
-  - {name: "Imuta", technologies: ["coffee"], description: "crazy small js lib to operate data true functional way", github: "https://github.com/timCF/imuta", kind: "lib"}
-  - {name: "Act", technologies: ["coffee"], description: "this small lib provides almost pure erlang-style actors in js", github: "https://github.com/timCF/act", kind: "lib"}
-  - {name: "Cibash", technologies: ["bash","ci"], description: "some bash scripts for CI build and deploy", github: "https://github.com/timCF/cibash", kind: "lib"}
-  - {name: "Wwwest", technologies: ["elixir"], description: "wrapper around erlang cowboy webserver to simplify building json-based REST API", github: "https://github.com/timCF/wwwest", kind: "lib"}
-  - {name: "WwwestLite", technologies: ["elixir"], description: "simplified version of Wwwest library for building REST API", github: "https://github.com/timCF/wwwest_lite", kind: "lib"}
-  - {name: "Myswt", technologies: ["elixir","coffee","jade","sass","brunch","reactjs"], description: "based on erlang cowboy (server) and reactjs (client) simple template for fast building web-applications with user web interfaces", github: "https://github.com/timCF/myswt", kind: "lib"}
-  - {name: "Socex", technologies: ["elixir"], description: "console vk.com chat, multi-acc supported", github: "https://github.com/timCF/socex", kind: "app"}
-  - {name: "Cqlx", technologies: ["elixir","cassandra"], description: "simple wrapper around cqerl", github: "https://github.com/timCF/cqlx", kind: "lib"}
-  - {name: "Xmlex", technologies: ["elixir"], description: "simple wrapper around xmerl", github: "https://github.com/timCF/xmlex", kind: "lib"}
-  - {name: "Vkclj", technologies: ["clojure"], description: "wrapper around some vk.com REST API functions", github: "https://github.com/timCF/vkclj", kind: "lib"}
-  - {name: "Konvex", technologies: ["elixir"], description: "abstract conveyor to handle data, shared between threads (workers) using ets storage", github: "https://github.com/timCF/konvex", kind: "lib"}
-  - {name: "Vkan", technologies: ["clojure"], description: "parse some vk.com data to json / csv", github: "https://github.com/timCF/vkan", kind: "app"}
-  - {name: "Unrem", technologies: ["coffee"], description: "stack-based undo/redo manager for js", github: "https://github.com/timCF/unrem", kind: "lib"}
-  - {name: "Scelsx", technologies: ["scala"], description: "just scala-lang hello world : console util for format microsoft excel docs", github: "https://github.com/timCF/scelsx", kind: "app"}
-  - {name: "Other", technologies: [], description: "you can find other open-source projects on my github", github: "https://github.com/timCF?tab=repositories", kind: "lib"}
-  - {name: "Cachex", technologies: ["elixir"], description: "gen cache based on ets", github: "https://github.com/timCF/cachex", kind: "lib"}
 ---
 <div class="container-fluid">
-		{% for project in page.projects %}
+		{% for project in site.data.projects %}
 			{% assign color = forloop.index %}
 			{% assign is_even = forloop.index | modulo:2 %}
 			{% if is_even == 1 %}
 				<div class="row row-eq-height">
 					{% assign prev_index = forloop.index | minus: 1 %}
-					{% assign projects = "" | split:"|" | push: page.projects[forloop.index] | push: page.projects[prev_index] %}
+					{% assign projects = "" | split:"|" | push: site.data.projects[forloop.index] | push: site.data.projects[prev_index] %}
 					{% for project in projects %}
 						{% if project %}
 							{% assign color = forloop.index | minus: 1 | plus: color | modulo:6 %}
-							<div class="col-xs-6 btn-default {{ page.colors[color] }}" onclick="window.open('{{ project.github }}')">
+							<div class="col-xs-6 {{ site.data.colors[color] }} fadefast pointer" onclick="window.open('{{ project.github }}')" name="colorblock">
 								<h3>
 									{% for tech in project.technologies %}
-										<img class="imgicon" src="{{ page.technologies[tech].icon }}" data-toggle="tooltip" data-placement="top" title="{{ page.technologies[tech].hint }}" onclick="window.open('{{ page.technologies[tech].site }}')"/>
+										<img class="imgicon" src="{{ site.data.technologies[tech].icon }}" data-toggle="tooltip" data-placement="top" title="{{ site.data.technologies[tech].hint }}" onclick="window.open('{{ site.data.technologies[tech].site }}')"/>
 									{% endfor %}
 									{% if project.kind == "app" %}
 										<img class="imgicon" src="/img/app.png" data-toggle="tooltip" data-placement="top" title="this is application"/>
@@ -61,8 +27,8 @@ projects:
 										<img class="imgicon" src="/img/server.png" data-toggle="tooltip" data-placement="top" title="demo" onclick="window.open('{{ project.server }}')"/>
 									{% endif %}
 								</h3>
-								<h3>{{project.name}}</h3>
-								<p>{{project.description}}</p>
+								<h3 class="bigfont">{{project.name}}</h3>
+								<h4>{{project.description}}</h4>
 							</div>
 						{% endif %}
 					{% endfor %}
