--- a/person.html
+++ b/person.html
@@ -3,16 +3,60 @@ layout: default
 title: person
 ---
 <div>
-	<div class="container-fluid">
-		<div class="row">
-			<div class="col-xs-12">
-				<h4 class="text-justify">
-					Tkachuk Ilya, male, was born in 1990, single, no children, no pets. Education : Lomonosov Moscow State University, specialist in chemistry. Languages: Erlang, Elixir, Clojure (Lisp), CoffeeScript.
-				</h4>
-				<h4 class="text-justify">
-					Professional skills : Functional backend programming. Web programming. Building rest api. Can integrate anything with anything in the web. Have rich experience in development for BEAM/Erlang VM using OTP. I prefer Elixir language, but can write in pure Erlang if needed. Have experience in web development (prefer to use Erlang Cowboy webserver with Bullet websockets), for writing client side prefer CoffeeScript, use mainstream frameworks like Twitter Bootstrap. Used AngularJS, but now prefer to use ReactJS. For building client-side projects, I'm using brunch + jade + coffee + sass + jreact. My coffescript code is functional and declarative as much as possible. Have experience in development for UNIX-like OS. Have experience in MySQL, NoSQL. Use git in development process. Have experience in RabbitMQ.
-				</h4>
+	<div class="panel-group" id="accordion">
+
+
+		<div class="panel panel-default c_main_light">
+			<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+				<div class="panel-heading">
+				<h4 class="panel-title bigfont"> summary </h4>
+				</div>
+			</a>
+			<div id="collapseOne" class="panel-collapse collapse">
+				<div class="panel-body">
+					<div class="container-fluid">
+						<div class="row">
+							{% for property in site.data.personal %}
+								{% assign color = forloop.index | modulo:6 %}
+								<div class="col-md-3 {{ site.data.colors[color] }} fadefast bigfont" name="colorblock">
+									<i>{{ property[0] }}</i>
+									<b>{{ property[1] }}</b>
+								</div>
+							{% endfor %}
+							<div class="col-md-12 fadefast bigfont" name="colorblock">
+								<h2 class="text-justify">
+									Hello, my name is Ilya. My main skill is functional backend programming. Web programming. Building REST API. I can integrate anything with anything in the web. I have rich experience in development for BEAM/Erlang VM using OTP. I prefer Elixir language, but can write in pure Erlang if needed. I have experience in web development (prefer to use Erlang Cowboy webserver with Bullet websockets), for writing client side prefer CoffeeScript, use mainstream frameworks like Twitter Bootstrap. Used AngularJS, but now prefer to use ReactJS. For building client-side projects, I'm using brunch + jade + coffee + sass + jreact. My coffescript code is functional and declarative as much as possible. Have experience in development for UNIX-like OS. Have experience in MySQL, NoSQL. Use git in development process. Have experience in RabbitMQ. I really love functional programming, it's easy, clear and powerfull.
+								</h2>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
+		<div class="panel panel-default c_main_light">
+			<a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
+				<div class="panel-heading">
+				<h4 class="panel-title bigfont"> skills </h4>
+				</div>
+			</a>
+			<div id="collapseTwo" class="panel-collapse collapse">
+				<div class="panel-body">
+					<div class="container-fluid">
+						<div class="row">
+							{% for tech in site.data.technologies %}
+								{% assign color = forloop.index | modulo:6 %}
+								<div class="col-md-2 {{ site.data.colors[color] }} fadefast bigfont pointer" name="colorblock" onclick="window.open('{{ tech[1].site }}')">
+									<i>{{ tech[0] }}</i>
+									<img class="imgicon" src="{{ tech[1].icon }}" data-toggle="tooltip" data-placement="top" title="{{ tech[1].hint }}"/>
+									<b>{{ tech[1].level }}</b>
+								</div>
+							{% endfor %}
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+
 	</div>
 </div>
