--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: projects
 					{% for project in projects %}
 						{% if project %}
 							{% assign color = forloop.index | minus: 1 | plus: color | modulo:6 %}
-							<div class="col-xs-6 {{ site.data.colors[color] }} fadefast pointer trigger-gpu" onclick="window.open('{{ project.github }}')" name="colorblock">
+							<div class="col-xs-6 {{ site.data.colors[color] }} fadefast pointer trigger-gpu inithidden" onclick="window.open('{{ project.github }}')" name="colorblock">
 								<h3>
 									{% for tech in project.technologies %}
 										<img class="imgicon" src="{{ site.data.technologies[tech].icon }}" data-toggle="tooltip" data-placement="top" title="{{ site.data.technologies[tech].hint }}" onclick="window.open('{{ site.data.technologies[tech].site }}')"/>
@@ -27,7 +27,7 @@ title: projects
 										<img class="imgicon" src="/img/server.png" data-toggle="tooltip" data-placement="top" title="demo" onclick="window.open('{{ project.server }}')"/>
 									{% endif %}
 								</h3>
-								<h3 class="bigfont">{{project.name}}</h3>
+								<h3 class="bigfont" name="blocktext">{{project.name}}</h3>
 								<h4>{{project.description}}</h4>
 							</div>
 						{% endif %}
