--- a/person.html
+++ b/person.html
@@ -3,7 +3,7 @@ layout: default
 title: person
 ---
 <div>
-	<div class="panel-group" id="accordion">
+	<div class="panel-group animated flipInY" id="accordion">
 
 
 		<div class="panel panel-default c_main_light">
@@ -12,17 +12,17 @@ title: person
 				<h4 class="panel-title bigfont"> summary </h4>
 				</div>
 			</a>
-			<div id="collapseOne" class="panel-collapse collapse">
+			<div id="collapseOne" class="panel-collapse collapse inithidden">
 				<div class="panel-body">
 					<div class="container-fluid">
 						<div class="row">
 							{% for property in site.data.personal %}
 								{% assign color = forloop.index | modulo:6 %}
-								<div class="col-xs-4 {{ site.data.colors[color] }} fadefast trigger-gpu" name="colorblock">
+								<div class="col-xs-4 {{ site.data.colors[color] }} fadefast trigger-gpu inithidden" name="colorblock">
 									<h4>
 										<i>{{ property[0] }}</i>
 										<br>
-										<b>{{ property[1] }}</b>
+										<b><div name="blocktext">{{ property[1] }}</div></b>
 									</h4>
 								</div>
 							{% endfor %}
@@ -42,19 +42,19 @@ title: person
 				<h4 class="panel-title bigfont"> skills </h4>
 				</div>
 			</a>
-			<div id="collapseTwo" class="panel-collapse collapse">
+			<div id="collapseTwo" class="panel-collapse collapse inithidden">
 				<div class="panel-body">
 					<div class="container-fluid">
 						<div class="row">
 							{% for tech in site.data.technologies %}
 								{% assign color = forloop.index | modulo:6 %}
-								<div class="col-xs-4 {{ site.data.colors[color] }} fadefast pointer trigger-gpu" name="colorblock" onclick="window.open('{{ tech[1].site }}')">
+								<div class="col-xs-4 {{ site.data.colors[color] }} fadefast pointer trigger-gpu inithidden" name="colorblock" onclick="window.open('{{ tech[1].site }}')">
 									<h4>
 										<i>{{ tech[0] }}</i>
 										<br>
 										<img class="imgicon" src="{{ tech[1].icon }}" data-toggle="tooltip" data-placement="top" title="{{ tech[1].hint }}"/>
 										<br>
-										<b>{{ tech[1].level }}</b>
+										<b><div name="blocktext">{{ tech[1].level }}</div></b>
 									</h4>
 								</div>
 							{% endfor %}
