--- a/person.html
+++ b/person.html
@@ -3,7 +3,7 @@ layout: default
 title: person
 ---
 <div>
-	<div class="panel-group animated flipInY" id="accordion">
+	<div class="panel-group inithidden" id="accordion" name="baseblock">
 
 
 		<div class="panel panel-default c_main_light">
@@ -12,7 +12,7 @@ title: person
 				<h4 class="panel-title bigfont"> summary </h4>
 				</div>
 			</a>
-			<div id="collapseOne" class="panel-collapse collapse inithidden">
+			<div id="collapseOne" class="panel-collapse collapse inithidden" name="baseblock">
 				<div class="panel-body">
 					<div class="container-fluid">
 						<div class="row">
@@ -42,7 +42,7 @@ title: person
 				<h4 class="panel-title bigfont"> skills </h4>
 				</div>
 			</a>
-			<div id="collapseTwo" class="panel-collapse collapse inithidden">
+			<div id="collapseTwo" class="panel-collapse collapse inithidden" name="baseblock">
 				<div class="panel-body">
 					<div class="container-fluid">
 						<div class="row">
