--- a/person.html
+++ b/person.html
@@ -18,7 +18,7 @@ title: person
 						<div class="row">
 							{% for property in site.data.personal %}
 								{% assign color = forloop.index | modulo:6 %}
-								<div class="col-xs-4 {{ site.data.colors[color] }} fadefast trigger-gpu inithidden" name="colorblock">
+								<div class="col-xs-4 {{ site.data.colors[color] }} fadefast inithidden" name="colorblock">
 									<h4>
 										<i>{{ property[0] }}</i>
 										<br>
@@ -26,8 +26,9 @@ title: person
 									</h4>
 								</div>
 							{% endfor %}
-							<div class="col-xs-12">
-								<h3 class="text-justify">
+							<div class="col-xs-12 no-margin-padding">
+								<h3 class="no-margin-padding text-justify inithidden">
+									<img src="/img/summary/ava1.jpg" class="floatleft inithidden" data-toggle="modal" data-target="#ava1"/>
 									Hello, my name is Ilya. My main skill is functional backend programming. Web programming. Building REST API. I can integrate anything with anything in the web. I have rich experience in development for BEAM/Erlang VM using OTP. I prefer Elixir language, but can write in pure Erlang if needed. I have experience in web development (prefer to use Erlang Cowboy webserver with Bullet websockets), for writing client side prefer CoffeeScript, use mainstream frameworks like Twitter Bootstrap. Used AngularJS, but now prefer to use ReactJS. For building client-side projects, I'm using brunch + jade + coffee + sass + jreact. My coffescript code is functional and declarative as much as possible. Have experience in development for UNIX-like OS. Have experience in MySQL, NoSQL. Use git in development process. Have experience in RabbitMQ. I really love functional programming, it's easy, clear and powerful.
 								</h3>
 							</div>
@@ -48,11 +49,11 @@ title: person
 						<div class="row">
 							{% for tech in site.data.technologies %}
 								{% assign color = forloop.index | modulo:6 %}
-								<div class="col-xs-4 {{ site.data.colors[color] }} fadefast pointer trigger-gpu inithidden" name="colorblock" onclick="window.open('{{ tech[1].site }}')">
+								<div class="col-xs-4 {{ site.data.colors[color] }} fadefast pointer inithidden" name="colorblock" onclick="window.open('{{ tech[1].site }}')">
 									<h4>
 										<i>{{ tech[0] }}</i>
 										<br>
-										<img class="imgicon" src="{{ tech[1].icon }}" data-toggle="tooltip" data-placement="top" title="{{ tech[1].hint }}"/>
+										<img class="imgicon" name="blockimg" src="{{ tech[1].icon }}" data-toggle="tooltip" data-placement="top" title="{{ tech[1].hint }}"/>
 										<br>
 										<b><div name="blocktext">{{ tech[1].level }}</div></b>
 									</h4>
@@ -65,5 +66,12 @@ title: person
 		</div>
 
 
+	</div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade c_main" id="ava1">
+	<div class="modal-dialog c_blue">
+			<img src="/img/summary/ava1.jpg"/>
 	</div>
 </div>
