--- a/person.html
+++ b/person.html
@@ -70,8 +70,8 @@ title: person
 </div>
 
 <!-- Modal -->
-<div class="modal fade c_main" id="ava1">
-	<div class="modal-dialog c_blue">
+<div class="modal fade black" id="ava1">
+	<div class="modal-dialog">
 			<img src="/img/summary/ava1.jpg"/>
 	</div>
 </div>
