--- a/person.html
+++ b/person.html
@@ -70,7 +70,7 @@ title: person
 </div>
 
 <!-- Modal -->
-<div class="modal fade transparent" id="ava1">
+<div class="modal fade transparent fixed" id="ava1">
 	<div class="modal-dialog">
 		<img class="widthlimited" src="/img/summary/ava1.jpg"/>
 	</div>
