--- a/person.html
+++ b/person.html
@@ -68,3 +68,10 @@ title: person
 
 	</div>
 </div>
+
+<!-- Modal -->
+<div class="modal fade transparent" id="ava1">
+	<div class="modal-dialog">
+		<img class="widthlimited" src="/img/summary/ava1.jpg"/>
+	</div>
+</div>
