--- a/person.html
+++ b/person.html
@@ -34,6 +34,9 @@ title: person
 									Web programming. Building REST API. I can integrate anything with anything in the web.
 									I have rich experience in development for BEAM/Erlang VM using OTP.
 									I prefer Elixir language, but can write in pure Erlang if needed.
+									But I think Elixir is better, Elixir for Erlang is like Scala or Clojure for Java - it gives
+									full access to Erlang infrastructure, to all Erlang libraries and OTP,
+									and gives some extra features like powerful LISP-like meta-programming and better syntax.
 									I have experience in web development (prefer to use Erlang Cowboy webserver with Bullet websockets),
 									for writing client side prefer CoffeeScript, use mainstream frameworks like Twitter Bootstrap.
 									Used AngularJS, but now prefer to use ReactJS.
