remove frontend skills

--- a/person.html
+++ b/person.html
@@ -31,19 +31,14 @@ title: person
 									Hello, my name is Ilya.
 									I have been programming since 2012 (functional style since 2013).
 									My main skill is functional backend programming.
-									Web programming. Building REST API. I can integrate anything with anything in the web.
+									Web programming. Building API. I can integrate anything with anything in the web.
 									I have rich experience in development for BEAM/Erlang VM using OTP.
 									I prefer Elixir language, but can write in pure Erlang if needed.
 									But I think Elixir is better, Elixir for Erlang is like Scala or Clojure for Java - it gives
 									full access to Erlang infrastructure, to all Erlang libraries and OTP,
 									and gives some extra features like powerful LISP-like meta-programming and better syntax.
-									I have experience in web development (prefer to use Erlang Cowboy webserver with Bullet websockets),
-									for writing client side prefer CoffeeScript, use mainstream frameworks like Twitter Bootstrap.
-									Used AngularJS, but now prefer to use ReactJS.
-									For building client-side projects, I'm using brunch + jade + coffee + sass + jreact.
-									My coffescript code is functional and declarative as much as possible.
 									Have experience in development for UNIX-like OS. Have experience in MySQL, NoSQL.
-									Use git in development process. Have experience in RabbitMQ.
+									Use GIT in development process. Have experience in RabbitMQ.
 									I really love functional programming, it's easy, clear and powerful.
 								</h3>
 							</div>
@@ -95,7 +90,7 @@ title: person
 									I have been playing guitar since 2007.
 									It's only hobbie, but I was played in some professional bands, for example <a href="http://www.last.fm/ru/music/%D0%91%D0%B5%D0%B7%D0%B4%D0%BD%D0%B0+%D0%90%D0%BD%D0%B0%D0%BB%D1%8C%D0%BD%D0%BE%D0%B3%D0%BE+%D0%A3%D0%B3%D0%BD%D0%B5%D1%82%D0%B5%D0%BD%D0%B8%D1%8F" target="_blank">this one</a>.
 									I like different kind of music, but play good in blues and rock styles.
-									Favorite guitar is Gibson SG / Les Paul, aplifier - Carvin V3.
+									Favorite guitar is Gibson SG / Gibson Les Paul, aplifier - Carvin V3.
 									Favorite processors and music hardware label is Line 6.
 									Now I'm not playing very much because of my main work.
 								</h3>
