add erlang-universe section, update contacts

--- a/person.html
+++ b/person.html
@@ -47,6 +47,7 @@ title: person
 				</div>
 			</div>
 		</div>
+
 		<div class="panel panel-default c_main_light">
 			<a data-toggle="collapse" data-parent="#accordion" href="#person_skills">
 				<div class="panel-heading">
@@ -74,6 +75,7 @@ title: person
 				</div>
 			</div>
 		</div>
+
 		<div class="panel panel-default c_main_light">
 			<a data-toggle="collapse" data-parent="#accordion" href="#person_music">
 				<div class="panel-heading">
@@ -101,6 +103,29 @@ title: person
 			</div>
 		</div>
 
+		<div class="panel panel-default c_main_light">
+			<a data-toggle="collapse" data-parent="#accordion" href="#erlang_universe">
+				<div class="panel-heading">
+				<h4 class="panel-title bigfont"> erlang universe </h4>
+				</div>
+			</a>
+			<div id="erlang_universe" class="panel-collapse collapse inithidden" name="baseblock">
+				<div class="panel-body">
+					<div class="container-fluid">
+						<div class="row">
+							<div class="col-xs-12 no-margin-padding">
+								<h3 class="no-margin-padding text-justify inithidden">
+									<img src="/img/lfe-logo.png" class="floatleft inithidden" width="10%" data-toggle="modal" data-target="#lfe"/>
+									From time to time I'm giving lectures related to different aspects of Erlang VM.
+									You can find slides <a href="https://timcf.github.io/erlang-universe/index.html#1" target="_blank">here</a>.
+								</h3>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
 	</div>
 </div>
 
@@ -113,5 +138,10 @@ title: person
 <div class="modal fade transparent" id="ava2">
 	<div class="modal-dialog">
 		<img class="widthlimited" src="/img/ava/ava2.jpg"/>
+	</div>
+</div>
+<div class="modal fade transparent" id="lfe">
+	<div class="modal-dialog">
+		<img class="widthlimited" src="/img/lfe-logo.png"/>
 	</div>
 </div>
