--- a/index.html
+++ b/index.html
@@ -1,38 +1,4 @@
 ---
 layout: default
-title: projects
+title: Ilja Tkachuk
 ---
-<div class="container-fluid inithidden" name="baseblock">
-		{% for project in site.data.projects %}
-			{% assign color = forloop.index %}
-			{% assign is_even = forloop.index | modulo:2 %}
-			{% if is_even == 1 %}
-				<div class="row row-eq-height">
-					{% assign prev_index = forloop.index | minus: 1 %}
-					{% assign projects = "" | split:"|" | push: site.data.projects[prev_index] | push: site.data.projects[forloop.index] %}
-					{% for project in projects %}
-						{% if project %}
-							{% assign color = forloop.index | minus: 1 | plus: color | modulo:6 %}
-							<div class="col-xs-6 {{ site.data.colors[color] }} fadefast pointer inithidden" onclick="window.open('{{ project.github }}')" name="colorblock">
-								<h3>
-									{% for tech in project.technologies %}
-										<img class="imgicon" src="{{ site.data.technologies[tech].icon }}" data-toggle="tooltip" data-placement="top" title="{{ site.data.technologies[tech].hint }}" onclick="window.open('{{ site.data.technologies[tech].site }}')"/>
-									{% endfor %}
-									{% if project.kind == "app" %}
-										<img class="imgicon" src="/img/app.png" data-toggle="tooltip" data-placement="top" title="this is application"/>
-									{% else %}
-										<img class="imgicon" src="/img/lib.png" data-toggle="tooltip" data-placement="top" title="this is library"/>
-									{% endif %}
-									{% if project.server %}
-										<img class="imgicon" src="/img/server.png" data-toggle="tooltip" data-placement="top" title="demo" onclick="window.open('{{ project.server }}')"/>
-									{% endif %}
-								</h3>
-								<h3 class="bigfont" name="blocktext">{{project.name}}</h3>
-								<h4>{{project.description}}</h4>
-							</div>
-						{% endif %}
-					{% endfor %}
-				</div>
-			{% endif %}
-		{% endfor %}
-</div>
