add ava and typed.js

--- a/index.html
+++ b/index.html
@@ -2,3 +2,27 @@
 layout: default
 title: Ilja Tkachuk
 ---
+
+<div class="app-header">
+  <!-- Navbar -->
+  <div class="app-nav">
+    <a href="/" class="btn btn-default" role="button">
+      <strong>HOME</strong>
+      <span class="fa fa-home fa-2x"></span>
+    </a>
+    <div class="btn-group" role="group">
+      <div class="btn-group" role="group">
+        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <strong>MENU</strong>
+          <span class="fa fa-bars fa-2x"></span>
+        </button>
+        <ul class="dropdown-menu">
+          <li><a href="#">Dropdown link</a></li>
+          <li><a href="#">Dropdown link</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <!-- Ava -->
+  <div class="app-main-ava center-block"></div>
+</div>
