--- a/index.html
+++ b/index.html
@@ -25,4 +25,8 @@ title: Ilja Tkachuk
   </div>
   <!-- Ava -->
   <div class="app-main-ava center-block"></div>
+  <!-- Greetings -->
+  <div class="text-center">
+    <span id="app-greetings"></span>
+  </div>
 </div>
