add awesome novacancy neon animations

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@ title: Ilja Tkachuk
   </div>
   <!-- Ava -->
   <div class="app-main-ava center-block"></div>
-  <!-- Greetings -->
-  <div class="text-center">
-    <span id="app-greetings"></span>
+  <!-- My name -->
+  <div class="text-center margin-top">
+    <span id="app-myname"></span>
   </div>
 </div>
