add main ava flipinx animation

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ title: Ilja Tkachuk
     </div>
   </div>
   <!-- Ava -->
-  <div class="app-main-ava center-block"></div>
+  <div class="app-main-ava center-block animated flipInX"></div>
   <!-- My name -->
   <div class="text-center margin-top">
     <span id="app-myname"></span>
