fix img animation z-index

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@ title: Ilja Tkachuk
 <div class="app-header">
   <!-- Navbar -->
   <div class="app-nav">
-    <a href="/" class="btn btn-default tnsl-flicker" role="button">
+    <!--a href="/" class="btn btn-default tnsl-flicker" role="button">
       <strong>HOME</strong>
       <span class="fa fa-home fa-2x"></span>
-    </a>
+    </a-->
     <div class="btn-group tnsl-flicker" role="group">
       <div class="btn-group" role="group">
         <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
