prettify index page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: Ilja Tkachuk
     </a-->
     <div class="btn-group tnsl-flicker" role="group">
       <div class="btn-group" role="group">
-        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <strong>MENU</strong>
           <span class="fa fa-bars fa-2x"></span>
         </button>
@@ -26,7 +26,13 @@ title: Ilja Tkachuk
   <!-- Ava -->
   <div class="app-main-ava center-block animated flipInX"></div>
   <!-- My name -->
-  <div class="text-center margin-top">
+  <div class="text-center app-myname-margin">
     <span id="app-myname"></span>
   </div>
+  <!-- Short summury -->
+  <p class="short-summury text-center tnsl-flicker">
+    <span id="short-summury">
+      Erlang, Elixir, OTP developer. Functional programming enthusiast.
+    </span>
+  </p>
 </div>
