--- a/index.html
+++ b/index.html
@@ -17,14 +17,20 @@ title: Ilja Tkachuk
           <span class="fa fa-bars fa-2x"></span>
         </button>
         <ul class="dropdown-menu">
-          <li><a href="#">Dropdown link</a></li>
-          <li><a href="#">Dropdown link</a></li>
+          <li><a href="https://github.com/timCF" target="_blank">Github</a></li>
+          <li><a href="https://timcf.github.io/erlang-universe/index.html#1" target="_blank">Erlang-Universe</a></li>
+          <li class="divider"></li>
+          <li><a href="mailto:tim4CF@gmail.com">Email</a></li>
+          <li class="divider"></li>
+          <li><a href="https://ru.linkedin.com/in/ilya-tkachuk-a59a30aa" target="_blank">Linkedin</a></li>
+          <li><a href="https://www.facebook.com/llstrainll" target="_blank">Facebook</a></li>
+          <li><a href="https://habrahabr.ru/users/strain/topics/" target="_blank">Habrahabr</a></li>
         </ul>
       </div>
     </div>
   </div>
   <!-- Ava -->
-  <div class="app-main-ava center-block animated flipInX"></div>
+  <div class="app-main-ava center-block animated flipInX hidden"></div>
   <!-- My name -->
   <div class="text-center app-myname-margin">
     <span id="app-myname"></span>
