--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: Ilja Tkachuk
       <strong>HOME</strong>
       <span class="fa fa-home fa-2x"></span>
     </a-->
-    <div class="btn-group tnsl-flicker" role="group">
+    <div class="btn-group tnsl-flickerQuick" role="group">
       <div class="btn-group" role="group">
         <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <strong>MENU</strong>
@@ -36,7 +36,7 @@ title: Ilja Tkachuk
     <span id="app-myname"></span>
   </div>
   <!-- Short summury -->
-  <p class="short-summury text-center tnsl-flicker">
+  <p class="short-summury text-center tnsl-flickerQuick">
     <span id="short-summury">
       Erlang, Elixir, OTP developer. Functional programming enthusiast.
     </span>
