fix ava border and menu

--- a/index.html
+++ b/index.html
@@ -10,23 +10,21 @@ title: Ilja Tkachuk
       <strong>HOME</strong>
       <span class="fa fa-home fa-2x"></span>
     </a-->
-    <div class="btn-group tnsl-flickerQuick" role="group">
-      <div class="btn-group" role="group">
-        <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <strong>MENU</strong>
-          <span class="fa fa-bars fa-2x"></span>
-        </button>
-        <ul class="dropdown-menu">
-          <li><a href="https://github.com/timCF" target="_blank">Github</a></li>
-          <li><a href="https://timcf.github.io/erlang-universe/index.html#1" target="_blank">Erlang-Universe</a></li>
-          <li class="divider"></li>
-          <li><a href="mailto:tim4CF@gmail.com">Email</a></li>
-          <li class="divider"></li>
-          <li><a href="https://ru.linkedin.com/in/ilya-tkachuk-a59a30aa" target="_blank">Linkedin</a></li>
-          <li><a href="https://www.facebook.com/llstrainll" target="_blank">Facebook</a></li>
-          <li><a href="https://habrahabr.ru/users/strain/topics/" target="_blank">Habrahabr</a></li>
-        </ul>
-      </div>
+    <div class="dropdown tnsl-flickerQuick">
+      <button class="btn btn-danger dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+        <strong>MENU</strong>
+        <span class="fa fa-bars fa-2x"></span>
+      </button>
+      <ul class="dropdown-menu">
+        <li><a href="https://github.com/timCF" target="_blank">Github</a></li>
+        <li><a href="https://timcf.github.io/erlang-universe/index.html#1" target="_blank">Erlang-Universe</a></li>
+        <li class="divider"></li>
+        <li><a href="mailto:tim4CF@gmail.com">Email</a></li>
+        <li class="divider"></li>
+        <li><a href="https://ru.linkedin.com/in/ilya-tkachuk-a59a30aa" target="_blank">Linkedin</a></li>
+        <li><a href="https://www.facebook.com/llstrainll" target="_blank">Facebook</a></li>
+        <li><a href="https://habrahabr.ru/users/strain/topics/" target="_blank">Habrahabr</a></li>
+      </ul>
     </div>
   </div>
   <!-- Ava -->
