add summary block

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@ title: Ilja Tkachuk
         <span class="fa fa-bars fa-2x"></span>
       </button>
       <ul class="dropdown-menu">
+        <li><a href="#summary">Summary</a></li>
+        <li class="divider"></li>
         <li><a href="https://github.com/timCF" target="_blank">Github</a></li>
         <li><a href="https://timcf.github.io/erlang-universe/index.html#1" target="_blank">Erlang-Universe</a></li>
         <li class="divider"></li>
@@ -28,7 +30,7 @@ title: Ilja Tkachuk
     </div>
   </div>
   <!-- Ava -->
-  <div class="app-main-ava center-block animated flipInX hidden"></div>
+  <div class="app-main-ava app-img center-block animated flipInX hidden"></div>
   <!-- My name -->
   <div class="text-center app-myname-margin">
     <span id="app-myname"></span>
@@ -39,4 +41,35 @@ title: Ilja Tkachuk
       Erlang, Elixir, OTP developer. Functional programming enthusiast.
     </span>
   </p>
+</div>
+
+<!-- Long summury -->
+<div class="container-fluid app-long-summary" id="summary">
+  <div class="row jumbotron app-block">
+    <div class="col-md-6 app-block">
+      <div class="page-header no-margin-top">
+        <h1>About me</h1>
+      </div>
+      <p>
+        Hello!
+        My name is Ilja Tkachuk (also known as timCF).
+        I'm backend software developer, live in Tallinn, Estonia.
+        <br><br>
+        I have been programming since 2012.
+        At the beginning I had some experience of development in imperative languages like C++ and JavaScript,
+        but I did well only when I switched to functional languages like Erlang and Elixir.
+        <br><br>
+        Today my main skill is functional backend programming
+        and I'm strong expert in BEAM/Erlang VM platform, Erlang and Elixir languages.
+        I have strong understanding of multithreading and interaction between Erlang processes.
+        Of course in commercial development I'm using mainstream frameworks like OTP, Phoenix and Ecto.
+        <br><br>
+        Future plans - to become more familiar with static-typed functional languages like Haskell.
+        If static-typed languages for BEAM/Erlang VM (like Elchemy or Alpaca) will be successful - I will be happy to switch.
+      </p>
+    </div>
+    <div class="col-md-6 app-block">
+      <img src="/img/ava/ava4.jpg" class="img-responsive img-center app-img"/>
+    </div>
+  </div>
 </div>
